# logicus

./: README.md  pyproject.toml
src/logicus/: cli.py
