[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"
[project]
name = "logicus"
version = "0.0.1"
authors = [
    {name="Alexander Fedotov", email="alex.fedotov@aol.com"},
]
description = "λογικός"
readme = "README.md"
requires-python = ">=3.10"
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]

keywords = ["logicus"]

dependencies = [
    "PyGithub >= 2.6.0",
    "requests >= 2.32.3",
    "click >= 8.3.0"
]

[project.scripts]
logicus = "logicus.cli:run"

[project.urls]
"Homepage" = "https://github.com/alxfed/logicus"
"Bug Tracker" = "https://github.com/alxfed/logicus/issues"